<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.diceapp.ui.viewModel.GameViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DiceRollFragment"
        android:background="@color/white_ish">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <!-- Replace LottieAnimationView with ImageView -->
            <ImageView
                android:id="@+id/dice_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:src="@drawable/dice_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/high_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high"
                    android:backgroundTint="@color/black"
                    android:layout_margin="10dp"/>

                <Button
                    android:id="@+id/medium_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/grey"/>
            </LinearLayout>

            <Button
                android:id="@+id/low_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/player_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_score_0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bot_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bot_score_0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/round_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_1"
                android:textSize="18sp" />
        </LinearLayout>
    </FrameLayout>
</layout>
